Modified footer.html and index.html for layout improvements and minor fixes

--- a/footer.html
+++ b/footer.html
@@ -58,7 +58,7 @@
                 Contact
             </p>
             <div class="ft-sub-bx">
-                <img src="../assets/ic_mail.svg" alt="email" />
+                <img src="./assets/ic_mail.svg" alt="email" />
                 <p class="ft-subtt">
                     hyeonje1211@gmail.com
                 </p>
