--- a/footer.html
+++ b/footer.html
@@ -48,6 +48,10 @@
             margin-bottom: 0.156vw;
             /* 3px */
         }
+        .ft-sub-bx {
+            width: 1.25vw;
+            height: 1.25vw;
+        }
     </style>
 </head>
 
