--- a/footer.html
+++ b/footer.html
@@ -48,7 +48,7 @@
             margin-bottom: 0.156vw;
             /* 3px */
         }
-        .ft-sub-bx {
+        .ft-sub-bx img{
             width: 1.25vw;
             height: 1.25vw;
         }
