--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
             display: flex;
             justify-content: center;
         }
-
+        .below-bx img{
+            width:1.25vw;
+            height:1.25vw;
+        }
         .secondsec-content,
         .thirdsec-content {
             max-width: 50vw;
