--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                             <span class="skill-nm">Oracle</span>
                         </div>
                         <div class="skill-bx">
-                            <img src="./assets/Mysql.svg" alt="mysql">
+                            <img src="./assets/MySQL.svg" alt="mysql">
                             <span class="skill-nm">Mysql</span>
                         </div>
                         <div class="skill-bx">
